--- a/java-pong/pom.xml
+++ b/java-pong/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>java-demo</artifactId>
+    <artifactId>java-pong</artifactId>
     <version>1.0.0</version>
 
     <parent>
