Replace ping-nodejs microservice with string-util-microservice.

--- a/string-util-microservice/Dockerfile
+++ b/string-util-microservice/Dockerfile
@@ -1,8 +1,8 @@
 FROM node
-RUN mkdir /opt/ping-nodejs
-WORKDIR /opt/ping-nodejs
-ADD package.json /opt/ping-nodejs/
-ADD src /opt/ping-nodejs/src
+RUN mkdir /opt/string-util-microservice
+WORKDIR /opt/string-util-microservice
+ADD package.json /opt/string-util-microservice/
+ADD src /opt/string-util-microservice/src
 ADD https://releases.hashicorp.com/envconsul/0.6.2/envconsul_0.6.2_linux_amd64.tgz /tmp/
 RUN tar -xf /tmp/envconsul_0.6.2_linux_amd64.tgz -C /usr/local/bin && rm /tmp/envconsul_0.6.2_linux_amd64.tgz
 RUN npm install
