Add test for string-util-microservice.

--- a/capitalizer-microservice/src/main/resources/application.yml
+++ b/capitalizer-microservice/src/main/resources/application.yml
@@ -2,5 +2,6 @@ spring:
   cloud:
     consul:
       discovery:
+        enabled: true
         service-name: capitalizer-microservice
         instanceId: capitalizer-microservice-${random.value}
