--- a/candidate-microservice/pom.xml
+++ b/candidate-microservice/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>capitalizer-microservice</artifactId>
+    <artifactId>candidate-microservice</artifactId>
     <version>1.0.0</version>
 
     <parent>
