--- a/recruiter-microservice/package.json
+++ b/recruiter-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "string-util-microservice",
+  "name": "recruiter-microservice",
   "version": "1.0.0",
   "description": "",
   "main": "./app.js",
