--- a/recruiter-microservice/package.json
+++ b/recruiter-microservice/package.json
@@ -5,7 +5,9 @@
   "main": "./app.js",
   "scripts": {
     "start": "node ./app.js",
-    "test": "mocha ./test.js"
+    "test": "mocha ./test.js",
+    "build": "true",
+    "clean": "true"
   },
   "author": "",
   "license": "ISC",
